--- a/openssl/openssl.rc
+++ b/openssl/openssl.rc
@@ -1,15 +1,15 @@
 PACKMAN_SPACE=play-ground
 PACKMAN_PRIVATE_KEY=~/.ssh/id_rsa
-PACKAGE_NAME="jo"
-PACKAGE_VERSION="1.0"
+PACKAGE_NAME="openssl"
+PACKAGE_VERSION="1.0.1"
 PACKAGE_BRANCH="${PACKAGE_NAME}-${PACKAGE_VERSION}"
 # comma separated in the form of $DIST:$VERSION
 SUPPORTED_ENVS="centos:7"
 # URL to download the package source from
-SOURCE_URL="https://github.com/jpmens/jo/archive/v1.0.zip"
+SOURCE_URL="http://openssl.org/source/openssl-1.0.1s.tar.gz"
 # Project URL
-PROJECT_URL="https://github.com/jpmens/jo"
-PACKAGE_DESCRIPTION="/home/packman/tmp/build/$PACKMAN_SPACE/${PACKAGE_NAME}/DESCRIPTION"
+PROJECT_URL="http://openssl.org"
+PACKAGE_DESCRIPTION="/home/packman/build/$PACKMAN_SPACE/${PACKAGE_NAME}/DESCRIPTION"
 MAINTAINER_NAME="Jess Portnoy"
 MAINTAINER_EMAIL="jess@packman.io"
 # optional for deb. If not supplied, use container's dist name
