--- a/ffmpeg/ffmpeg.rc
+++ b/ffmpeg/ffmpeg.rc
@@ -1,15 +1,15 @@
 PACKMAN_SPACE=play-ground
 PACKMAN_PRIVATE_KEY=~/.ssh/id_rsa
-PACKAGE_NAME="nginx"
-PACKAGE_VERSION="1.9.12"
+PACKAGE_NAME="ffmpeg"
+PACKAGE_VERSION="3.0"
 PACKAGE_BRANCH="${PACKAGE_NAME}-${PACKAGE_VERSION}"
 # comma separated in the form of $DIST:$VERSION
 SUPPORTED_ENVS="centos:7"
 # URL to download the package source from
-SOURCE_URL="http://nginx.org/download/nginx-1.9.12.tar.gz"
+SOURCE_URL="http://ffmpeg.org/releases/ffmpeg-3.0.tar.bz2"
 # Project URL
-PROJECT_URL="http://nginx.org"
-PACKAGE_DESCRIPTION="/home/packman/tmp/build/$PACKMAN_SPACE/${PACKAGE_NAME}/DESCRIPTION"
+PROJECT_URL="http://ffmpeg.org"
+PACKAGE_DESCRIPTION="/home/packman/build/$PACKMAN_SPACE/${PACKAGE_NAME}/DESCRIPTION"
 MAINTAINER_NAME="Jess Portnoy"
 MAINTAINER_EMAIL="jess@packman.io"
 # optional for deb. If not supplied, use container's dist name
