--- a/jo/jo.rc
+++ b/jo/jo.rc
@@ -3,6 +3,7 @@ PACKMAN_PRIVATE_KEY=~/.ssh/id_rsa
 PACKAGE_NAME="jo"
 PACKAGE_VERSION="1.0"
 PACKAGE_BRANCH="${PACKAGE_NAME}-${PACKAGE_VERSION}"
+PACKAGE_LICENSE=GPLv2
 # comma separated in the form of $DIST:$VERSION
 SUPPORTED_ENVS="centos:7"
 # URL to download the package source from
